Add Logback libs for logging in JSON